--- a/AspNetCoreTesting.Api.Tests/AspNetCoreTesting.Api.Tests.csproj
+++ b/AspNetCoreTesting.Api.Tests/AspNetCoreTesting.Api.Tests.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+	  <PackageReference Include="Bazinga.AspNetCore.Authentication.Basic" Version="2.0.1" />
 	  <PackageReference Include="FakeItEasy" Version="7.3.1" />
 	  <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="6.0.5" />
 	  <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.5" />
