--- a/AspNetCoreTesting.Api/AspNetCoreTesting.Api.csproj
+++ b/AspNetCoreTesting.Api/AspNetCoreTesting.Api.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.9" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.5" />
   </ItemGroup>
 
