--- a/AspNetCoreTesting.Api/appsettings.json
+++ b/AspNetCoreTesting.Api/appsettings.json
@@ -8,5 +8,6 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "Sql": "Server=.;Database=TestingDemo;User Id=sa;Password=P@ssword123"
-  }
+  },
+  "MySetting": "Production setting"
 }
